# opengl-red-book

./: .gitignore  CMakeLists.txt  README.md  build.sh  chapter-1.md  chapter-2.md  chapter-3.md  main.cpp  meson.build  shownotes.txt  vcpkg.json
.github/workflows/: ci.yaml
shownotes/: shownotes-ch3.txt  shownotes.txt
src/: main.cpp
